--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 <body>
 	<section id="home">
 		<div class="wrapper">
-			<div id="redband">Note: Jsonbox.io cloud instance will soon be shut down on <b>May 31st, 2021</b> due to lack of maintenance time. The Jsonbox.io's source code will continue to be open-sourced in Github.<br /><br /> FYI, you can create your own Jsonbox.io instance for free using <a href="https://www.heroku.com/" target="_blank">Heroku</a> & <a href="https://www.mongodb.com/cloud" target="_blank">MongoDB Cloud</a>. Go for it if you love Jsonbox.io :)</div>
+<!-- 			<div id="redband">Note: Jsonbox.io cloud instance will soon be shut down on <b>May 31st, 2021</b> due to lack of maintenance time. The Jsonbox.io's source code will continue to be open-sourced in Github.<br /><br /> FYI, you can create your own Jsonbox.io instance for free using <a href="https://www.heroku.com/" target="_blank">Heroku</a> & <a href="https://www.mongodb.com/cloud" target="_blank">MongoDB Cloud</a>. Go for it if you love Jsonbox.io :)</div> -->
 
 			<h1 id="title">
 				<div id="logo">
@@ -62,9 +62,10 @@
 				       value="https://jsonbox.io/${BOX_ID}"
 				       readonly />
 				<button class="far fa-copy" id="copyBtn" onclick="copyURL()"></button>
+				<button onClick="goToDashboard()">Go to Dashboard</button>
 			</div>
 			<a
-			   href="https://github.com/vasanthv/jsonbox#readme"
+			   href="https://github.com/thenikhilmannem/jsonbox#readme"
 			   target="_blank"
 			   id="githublink"
 			   role="button">
@@ -76,7 +77,7 @@
 				</small>
 			</p>
 			<div id="footer">
-				Made with &hearts; by <a href="https://vasanthv.com" target="_blank">Vasanth.V</a>
+				Hosted by <a href="https://heroku.com" target="_blank">Heroku</a>
 			</div>
 		</div>
 	</section>
